warnings reduced